# opencode-proxy-for-claude-code

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_REVIEW.md  Dockerfile  Dockerfile.headroom  LICENSE  Makefile  README.md  auth.py  client.py  config.py  context.py  docker-compose.yml  forward.py  main.py  models.json  pyproject.toml  requirements.txt  router.py  run.sh  sanitization.py  stop.sh  types.py
.github/workflows/: ci.yml
conversion/: __init__.py  request.py  response.py  streaming.py
observability/: __init__.py  stats.py
tests/: test_conversion.py  test_forward.py  test_integration.py  test_router.py  test_sanitization.py  test_streaming.py
